<resources>
    <string name="app_name">OwlApp (LRP Referee)</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">OwlApp</string>
    <string name="nav_header_subtitle">LRP Refereeing</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_functions">Referee Functions</string>
    <string name="menu_home">Characters</string>
    <string name="menu_skill">Skill</string>
    <string name="menu_player">Player</string>

    <string name="home_second">Home Second</string>

    <string name="hint_character">Character...</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Character not saved because it is empty.</string>

    <string name="hint_skill">Skill...</string>
    <string name="button_skill">Save</string>
    <string name="empty_not_saved_skill">Skill not saved because it is empty.</string>

    <string name="hint_player">Player...</string>
    <string name="button_player">Save</string>
    <string name="empty_not_saved_player">Player not saved because it is empty.</string>

    <string name="pref_api_url">10.0.2.2</string>
    <string name="pref_char_port">5010</string>
    <string name="pref_player_port">5003</string>
    <string name="pref_skill_port">5005</string>
    <string name="pref_api_path">/</string>

    <string name="Player_Id">Player Id</string>
    <string name="Is_Retired">Is Retired?</string>
    <string name="action_db">Update from Server</string>
    <string name="title_activity_settings">Settings</string>

    <string name="pref_charId_key">uk.co.dcurrey.owlapp.CHARID</string>
    <string name="pref_playerId_key">uk.co.dcurrey.owlapp.PLAYERID</string>
    <string name="pref_skillId_key">uk.co.dcurrey.owlapp.SKILLID</string>
    <string name="pref_itemId_key">uk.co.dcurrey.owlapp.ITEMID</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Details Pages -->
    <string name="detailsName">Name: </string>
    <string name="skillNameHint">Skill Name</string>
    <string name="skillDetailsTitle">Skill Details</string>
    <string name="saveSkill">Save Skill</string>
    <string name="playerDetailsTitle">Player Details</string>
    <string name="playerDetailsFName">First Name: </string>
    <string name="playerDetailsLName">Last Name: </string>
    <string name="playerNameHint">Player Name</string>
    <string name="savePlayer">Save Player</string>
    <string name="charDetailsTitle">Character Details</string>
    <string name="charNameHint">Character Name</string>
    <string name="charIsRetired">Is Retired?</string>
    <string name="saveChar">Save Character</string>
    <string name="char_search">Search for Character...</string>
    <string name="player_search">Search for Player...</string>
    <string name="skill_search">Search for Skill...</string>
    <string name="action_sync">Synchronise all</string>
    <string name="prompt_title">Are you sure you want to reset the database?</string>
    <string name="prompt_pos">Reset Database</string>
    <string name="cancel">Cancel</string>
    <string name="menu_items">Items</string>
    <string name="pref_items_port">5011</string>
    <string name="item_search">Search for an Item...</string>
    <string name="itemDetailsTitle">Item Details</string>
    <string name="itemDetailsId">Item ID:</string>
    <string name="itemDetailsName">Name:</string>
    <string name="itemDetailsForm">Form:</string>
    <string name="itemDetailsReqs">Requirements:</string>
    <string name="itemMaterialsHint">Item Materials</string>
    <string name="itemDetailsMaterials">Materials:</string>
    <string name="itemEffectHint">Item Effect</string>
    <string name="itemDetailsEffect">Effect:</string>
    <string name="itemRequirementsHint">Item Requirements</string>
    <string name="itemFormHint">Item Form</string>
    <string name="itemNameHint">Item Name</string>
    <string name="saveItem">Save Item</string>
    <string name="BondItem">Bond Item</string>
    <string name="addcharskill">Add Skill To Character</string>
    <string name="no_of_chars">Number of Characters:</string>
    <string name="skillidhint">Skill ID</string>
    <string name="hint_characterid">Character ID</string>
    <string name="item_id_hint">Item ID</string>
    <string name="skillXpHint">XP</string>
    <string name="detailsXp">XP:</string>
    <string name="no_of_players">Number of Players:</string>
    <string name="no_of_items">Number of Items:</string>
    <string name="no_of_skills">Number of Skills:</string>
    <string name="api_header">API Settings</string>
    <string name="itemport_title">Items API port</string>
    <string name="itemurl_title">Items API URL</string>
    <string name="charurl_title">Characters API URL</string>
    <string name="charport_title">Characters API Port</string>
    <string name="skillurl_title">Skills API URL</string>
    <string name="skillport_title">Skills API Port</string>
    <string name="playerurl_title">Players API URL</string>
    <string name="playerport_title">Players API Port</string>
</resources>
