<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_functions"
            android:icon="@drawable/ic_placeholder"
            android:title="@string/menu_functions" />
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_user"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_skill"
            android:icon="@drawable/ic_placeholder"
            android:title="@string/menu_skill" />
        <item
            android:id="@+id/nav_player"
            android:icon="@drawable/ic_user"
            android:title="@string/menu_player" />
        <item
            android:id="@+id/nav_items"
            android:icon="@drawable/ic_weapon"
            android:title="@string/menu_items" />
    </group>
</menu>
