<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.items.ItemDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/itemDetailsTitle"
            android:textAlignment="center"
            android:textSize="30sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/itemDetailsId"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/detailsItemId"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textSize="20sp" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/itemDetailsName"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/detailsItemName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/itemNameHint"
                        android:inputType="textPersonName" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/itemDetailsForm"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/detailsItemForm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/itemFormHint"
                        android:inputType="textPersonName" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/itemDetailsReqs"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/detailsItemRequirements"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/itemRequirementsHint"
                        android:inputType="textPersonName" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/itemDetailsEffect"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/detailsItemEffect"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/itemEffectHint"
                        android:inputType="textPersonName" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/itemDetailsMaterials"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/detailsItemMaterials"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/itemMaterialsHint"
                        android:inputType="textPersonName" />

                </TableRow>

            </TableLayout>
        </FrameLayout>


        <Button
            android:id="@+id/btnEditItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/saveItem" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>